# place_recognition

./: .gitignore  CMakeLists.txt  README.md  package.xml
bow/: bow_vector.cpp  databse.cpp  descriptors_manipulator.cpp  feature_vector.cpp  quicklz.cpp  scoring_object.cpp  vocabulary.cpp
config/params/inpaintor/: roomba1.yaml  roomba2.yaml  roomba3.yaml  roomba4.yaml
config/rviz/: keypoints_detector.rviz  rviz.rviz
config/rviz/dom_place_recognition/: roomba5.rviz
config/rviz/keypoints_detector/: roomba3.rviz
config/rviz/multi_place_recognition/: rviz.rviz
config/rviz/place_recognition/: roomba1.rviz  roomba5.rviz
config/rviz/rviz/: roomba1.rviz  roomba3.rviz  roomba4.rviz
dbow3/: bow_vector.cpp  database.cpp  feature_vector.cpp  quicklz.cpp
include/bow/: bow.h
include/bow/bow_vector/: bow_vector.h  l_norm.h  scoring_type.h  weighting_type.h
include/bow/database/: database.h  if_pair.h
include/bow/descriptors_manipulator/: descriptors_manipulator.h
include/bow/feature_vector/: feature_vector.h
include/bow/query_results/: query_results.h  result.h
include/bow/quicklz/: quicklz.h
include/bow/scoring_object/: scoring_object.h
include/bow/vocabulary/: node.h  vocabulary.h
include/dbow3/bow_vector/: bow_vector.h  l_norm.h  scoring_type.h
include/dbow3/database/: database.h  if_item.h
include/dbow3/descriptors_manipulator/: descriptors_manipulator.h
include/dbow3/feature_vector/: feature_vector.h
include/dbow3/query_results/: query_results.h
include/dbow3/quicklz/: quicklz.h
include/dbow3/vocabulary/: vocabulary.h
include/dbow3_ros/: dbow3_demo.h
include/multi_place_recognition/: match_recorder.h  multi_place_recognition.h  place_recognition_interfaces.h
include/place_recognition/: batch_place_recognition.h  image.h  images.h  place_recognition.h
include/place_recognition_utils/: image_searcher.h  keypoints_detector.h  reference_data_creator.h
include/utils/: inpaintor.h
launch/: batch_place_recognition.launch  bow.launch  dbow3_demo.launch  image_creator.launch  images_searcher.launch  keypoints_detector.launch  multi_place_recognition.launch  place_recognition.launch  reference_data_creator.launch
launch/ros_utils/: dbow3_demo.launch  image_searcher.launch  reference_data_creator.launch
launch/utils/: bag_player.launch  equirectangular_convertor.launch  image_unzipper.launch  multi_bag_player.launch
place_recognition/: CMakeLists.txt  package.xml
place_recognition/config/params/: robot_list.yaml
place_recognition/config/params/inpaintor/: roomba5.yaml  roomba6.yaml
place_recognition/config/rviz/: rviz.rviz
place_recognition/config/rviz/dom_place_recognition/: dom_place_recognition.rviz
place_recognition/config/rviz/keypoints_detector/: roomba2.rviz  roomba4.rviz  roomba6.rviz
place_recognition/config/rviz/keypoints_recorder/: roomba1.rviz  roomba2.rviz  roomba3.rviz  roomba4.rviz  roomba5.rviz  roomba6.rviz
place_recognition/config/rviz/mismatch/: mismatch.rviz
place_recognition/config/rviz/multi_place_recognition/: multi_place_recognition.rviz  rviz.rviz
place_recognition/config/rviz/rviz/: roomba2.rviz  roomba5.rviz  roomba6.rviz
place_recognition/dbow3/: descriptors_manipulator.cpp  query_results.cpp  scoring_object.cpp  vocabulary.cpp
place_recognition/include/batch_place_recognition/: batch_place_recognition.h
place_recognition/include/dbow3/bow_vector/: weighting_type.h
place_recognition/include/dbow3/query_results/: result.h
place_recognition/include/dbow3/scoring_object/: scoring_object.h
place_recognition/include/dbow3/vocabulary/: node.h
place_recognition/include/dbow3_ros/: dbow3_demo.h
place_recognition/include/dom_place_recognition/: dom_param.h  dom_place_recognition.h  dom_place_recognition_interface.h  dom_place_recognition_interfaces.h  object_name_list.h
place_recognition/include/multi_place_recognition/: match_recorder.h  multi_place_recognition.h  place_recognition_interfaces.h
place_recognition/include/place_recognition/: image.h
place_recognition/include/place_recognition_utils/: image_searcher.h  inpaintor.h  keypoints_detector.h  keypoints_recorder.h  mismatch_calculator.h  mismatch_point.h  mismatch_visualizer.h  reference_data_creator.h
place_recognition/launch/: dom_place_recognition.launch  multi_place_recognition.launch  place_recognition.launch
place_recognition/launch/ros_utils/: keypoints_detector.launch  keypoints_recorder.launch  mismatch_calculator.launch  mismatch_visualizer.launch  reference_data_creator.launch
place_recognition/launch/utils/: bag_player.launch  equirectangular_convertor.launch  multi_bag_player.launch
place_recognition/record/mismatch_result/: roomba1.txt  roomba2.txt  roomba3.txt  roomba4.txt  roomba5.txt  roomba6.txt
place_recognition/ros_utils/: keypoints_recorder.cpp  mismatch_calculator.cpp  mismatch_visualizer.cpp  reference_data_creator.cpp
place_recognition/scripts/: result_visualizer.py
place_recognition/src/: batch_place_recognition.cpp  dom.cpp  dom_place_recognition.cpp  dom_place_recognition_interface.cpp  dom_place_recognition_interfaces.cpp  place_recognition.cpp
place_recognition_msgs/: CMakeLists.txt  package.xml
place_recognition_msgs/msg/: PoseStamped.msg
ros_utils/: dbow3_demo.cpp  image_searcher.cpp  keypoints_detector.cpp  reference_data_creator.cpp
src/: batch_place_recognition.cpp  bow.cpp  dbow3_demo.cpp  image_creator.cpp  images_searcher.cpp  keypoints_detector.cpp  multi_place_recognition.cpp  place_recognition.cpp  reference_data_creator.cpp
