<?xml version="1.0"?>
<package format="2">
  <name>place_recognition</name>
  <version>0.0.0</version>
  <description>The place_recognition package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dom_estimator_msgs</depend>
  <depend>object_detector_msgs</depend>
  <depend>place_recognition_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
